--- a/probeersel1.5.html
+++ b/probeersel1.5.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
     <header>miro</header>
-    <h1>verlel</h1>   
+    <h1>verlel</h1>
+    <h2>lalal ik ben de leukste</h2>
+    
 </body>
+
 </html>
